# Synapsehack-SoccerTrack-V2-

./: .cursorrules  .gitignore  Makefile  README.md  bridge_to_pitch.py  final_scout_report.csv  generate_scout_report.py  local_tracker_config.yaml  plot_tactical_map.py  pyproject.toml
configs/: default_config.yaml  tracker_config.yaml  video_trimming_config.yaml
docs/: README.md  calibration.md  cli.md  configuration.md  data_processing.md  ground_truth_creation.md  index-ja.html  index.html  setup.md  task-bas.html  task-gsr.html  task-mot.html  visualization.md
notebooks/: creating_ground_truth_bbox.ipynb  eda.ipynb  raw_event_data.ipynb
scripts/: analyze_bbox_dimensions.sh  calibrate_camera.sh  convert_coordinates_to_bboxes.sh  convert_pitch_plane_to_image_plane.sh  convert_raw_to_pitch_plane.sh  create_ground_truth.sh  generate_calibration_mappings.sh  generate_detections.sh  make_json.py  plot_bboxes_on_video.sh  plot_coordinates_on_video.sh  pp.py  sample_frames_from_videos.py  trim_video_into_halves.sh  visualize_events.py
scripts/calibration/: calculate_homography.py  calibrate_camera_from_mappings.py  checkerboard_calibration.py  crop_image.py  keypoints_calibration.py  keypoints_visualization.py
scripts/coordinate_conversion/: convert_pitch_plane_mot_to_image_plane_mot.py  convert_raw_to_pitch_plane_mot.py
scripts/event_detection_tracking/: event_detection.py  pass_detection.py
scripts/roboflow/: download.py  split.py  (+1 more)
shell_scripts/: keypionts_viz.sh  set_permissions.sh
src/: __init__.py  csv_utils.py  example.py  help.py  main.py
(+43 files in other folders)
